tests/baselines/reference/jsxViaImport.errors.txt
component.d.ts(2,41): error TS7008: Member 'props' implicitly has an 'any' type.
consumer.tsx(5,17): error TS2604: JSX element type 'BaseComponent' does not have any construct or call signatures.


==== consumer.tsx (1 errors) ====
    /// <reference path="component.d.ts" />
    import BaseComponent = require('BaseComponent');
    class TestComponent extends React.Component<any, {}> {
        render() {
            return <BaseComponent />;
                    ~~~~~~~~~~~~~
!!! error TS2604: JSX element type 'BaseComponent' does not have any construct or call signatures.
        }
    }
    
==== component.d.ts (1 errors) ====
    declare namespace JSX {
      interface ElementAttributesProperty { props; }
                                            ~~~~~
!!! error TS7008: Member 'props' implicitly has an 'any' type.
    }
    declare namespace React {
      class Component<T, U> { }
    }
    declare module "BaseComponent" {
        var base: React.Component<any, {}>;
        export = base;
    }
    